--- a/Matchmaker/Matchmaker/Matchmaker.vcxproj.filters
+++ b/Matchmaker/Matchmaker/Matchmaker.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Matchmaker.cpp">
+    <ClCompile Include="matchmaker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
