--- a/polymorphism/polymorphism/polymorphism.vcxproj
+++ b/polymorphism/polymorphism/polymorphism.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Nobbs.cpp" />
     <ClCompile Include="polymorphism.cpp" />
     <ClCompile Include="Vampire.cpp" />
+    <ClCompile Include="Wolf.cpp" />
     <ClCompile Include="Zombie.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +164,7 @@
     <ClInclude Include="Human.h" />
     <ClInclude Include="Nobbs.h" />
     <ClInclude Include="Vampire.h" />
+    <ClInclude Include="Wolf.h" />
     <ClInclude Include="Zombie.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
