--- a/polymorphism/polymorphism/polymorphism.vcxproj.filters
+++ b/polymorphism/polymorphism/polymorphism.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Dwarf.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Werewolf.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Citizen.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Dwarf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Werewolf.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
